tests/snapshots/html_test__html_doc_files_rewrite-23.snap
---
source: tests/html_test.rs
expression: "files.get(\"search_index.js\").unwrap()"
---
(function () {
  window.DENO_DOC_SEARCH_INDEX = {"nodes":[{"kind":["class"],"name":"A","file":".","location":{"filename":".","line":45,"col":0,"byteIndex":741},"declarationKind":"private","deprecated":false},{"kind":["class"],"name":"B","file":".","location":{"filename":".","line":48,"col":0,"byteIndex":770},"declarationKind":"export","deprecated":false},{"kind":["class"],"name":"Bar","file":".","location":{"filename":".","line":31,"col":0,"byteIndex":588},"declarationKind":"export","deprecated":false},{"kind":["typeAlias"],"name":"Baz","file":".","location":{"filename":".","line":41,"col":0,"byteIndex":702},"declarationKind":"export","deprecated":false},{"kind":["class"],"name":"Foo","file":".","location":{"filename":".","line":25,"col":0,"byteIndex":488},"declarationKind":"export","deprecated":false},{"kind":["class"],"name":"Foobar","file":".","location":{"filename":".","line":34,"col":0,"byteIndex":622},"declarationKind":"export","deprecated":false},{"kind":["interface"],"name":"Hello","file":".","location":{"filename":".","line":37,"col":0,"byteIndex":655},"declarationKind":"export","deprecated":false},{"kind":["function","function","function"],"name":"qaz","file":".","location":{"filename":".","line":53,"col":0,"byteIndex":812},"declarationKind":"export","deprecated":false},{"kind":["variable"],"name":"default","file":"foo","location":{"filename":"foo","line":7,"col":6,"byteIndex":167},"declarationKind":"export","deprecated":false},{"kind":["function"],"name":"x","file":"foo","location":{"filename":"foo","line":1,"col":0,"byteIndex":0},"declarationKind":"export","deprecated":false}]};
})()
